--- a/rasa-chatbot/web/index.html
+++ b/rasa-chatbot/web/index.html
@@ -104,7 +104,7 @@
             try {
                 // First try to check if the server is available
                 try {
-                    const versionResponse = await fetch('http://localhost:3000/version', {
+                    const versionResponse = await fetch('http://localhost:5005/version', {
                         method: 'GET',
                         headers: {
                             'Accept': 'application/json'
@@ -120,7 +120,7 @@
                     throw new Error('RASA_SERVER_DOWN');
                 }
 
-                const response = await fetch('https://lk0k0sk4cs088w4kg4kwok0g.bizfloe.com/webhooks/rest/webhook', {
+                const response = await fetch('http://localhost:5005/webhooks/rest/webhook', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
